<resources>
    <string name="app_name">NotesSix</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="no_notes">No notes</string>
    <string name="save">Save</string>
    <string name="search_notes">Search notes</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete note</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="are_you_sure_you_want_to_delete_all_notes">Are you sure you want to delete all notes?</string>
    <string name="are_you_sure_you_want_to_permanently_delete_this_note">Are you sure you want to permanently delete this note?</string>
    <string name="note_deleted">Note deleted</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="note_added_successfully">Note added successfully</string>
    <string name="note_updated_successfully">Note updated successfully</string>
    <string name="please_fill_in_the_fields">Please fill in the fields!</string>
    <string name="ui_mode">UI Mode</string>
    <string name="share_note">\nTitle: %s \n\nDescription: %s \n\nCreated: %s \n\nVisit: https://github.com/rasenyer/NotesSix</string>
</resources>