<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.rasenyer.notessix.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_AddFragment"
            app:destination="@id/AddFragment"/>

        <action
            android:id="@+id/action_HomeFragment_to_UpdateFragment"
            app:destination="@id/UpdateFragment"/>

    </fragment>

    <fragment
        android:id="@+id/AddFragment"
        android:name="com.rasenyer.notessix.ui.fragments.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add">

        <action
            android:id="@+id/action_AddFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/AddFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/UpdateFragment"
        android:name="com.rasenyer.notessix.ui.fragments.UpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_update">

        <argument
            android:name="currentNote"
            app:argType="com.rasenyer.notessix.datasource.local.model.Note"
            app:nullable="true"/>

        <action
            android:id="@+id/action_UpdateFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/UpdateFragment"
            app:popUpToInclusive="true"/>

    </fragment>

</navigation>